# genX3D

./: .dockerignore  .env  .gitignore  DEPENDENCY_MANAGEMENT.md  DOCKER_HUB.MD  DOCKER_SETUP.md  DOCUMENTATION_INTEGRATION.md  Dockerfile  Dockerfile_for_react_frontend  Dockerfile_v1  EC2.md  FRONTEND_INTEGRATION.md  INSTALLATION.md  README.md  TEMP_MODELS_CLEANUP.md  arhcitecture.md  docker-compose.yml  docker_backup.md  ec2_final_steps.md  env.example  environment.yml  pyproject.toml  requirements.txt  setup.sh  setup_llm.py  setup_react_frontend.sh  test_code_cleaning.py  test_code_generation.py  test_docs_integration.py  test_frontend_integration.html  test_hybrid_rag.py  test_rag_assisted_generation.py  test_retry_logic.py  test_routing.py
GENX_3D_MCP/genx_mcp_claude/: clients.py  servers.ipynb  servers.py
backend/: .env  RAG_INTEGRATION.md  cuboid.step  debug_cadquery.py  example_cadquery_code.py  kill_8000.md  langgraph_app.py  main.py  output.step  path_to_step_file  requirements.txt  step_file_path  test_cadquery_real.py  test_cleanup.py  test_complete_flow.py  test_core_imports.py  test_mamba_setup.py  test_rag.py  test_rag_simple.py  test_with_curl.sh  thick_plate.step
backend/MCP_plans/: Tradeoffs.ipynb  architecture.md  mcp_implementation.ipynb
backend/MCP_plans/Tools_Reources/: Tools_Resources.ipynb
backend/RAG_PineCone/: faiss_embedding_creator.ipynb  genx3d_pinecode_final.ipynb  pinecone_cloud.ipynb  rag_dataset_local.jsonl  vector_data.pkl
backend/experiements/: docker_ollama.ipynb  mode_executor.ipynb  model_creator.ipynb  progress_local.json  rag_dataset_local copy.jsonl
backend/experiements/FineTune/: final_finetuning_setup.ipynb  (+3 more)
backend/graph/: langgraph_app.py
backend/static/: block_with_holes.step  block_with_holes.stl  main.js  model.glb  model.step  model.stl
backend/templates/: index.html
docs/: README.md  docusaurus.config.ts  sidebars.ts
docs/docs/: intro.md
ec2_connect/: ec_runtime_command.md  genx3d_genx3d.txt  genx3d_key.pem
frontend-react/: README.md  package.json  test_zoom.html
frontend-react/public/: index.html  stepWorker.js
frontend-react/src/: App.css  App.js  config.js
frontend/CascadeStudio/: index.html  package.json  setup.md  test_integration.html
static/docs/: 404.html  index.html  sitemap.xml
static/generated_models/: model_120.step  model_121.step  model_122.step  model_123.step  model_124.step  model_125.step  model_126.step  model_127.step  model_128.step  model_129.step  model_130.step  model_131.step  model_132.step  model_133.step  model_134.step  model_135.step  model_136.step  model_137.step  model_138.step  model_139.step  model_140.step  model_141.step  model_142.step  model_143.step  model_144.step  model_145.step  model_146.step  model_147.step  model_148.step  model_149.step  model_150.step  model_151.step  model_152.step  model_153.step  model_154.step  model_155.step  model_156.step  model_157.step  model_158.step  model_159.step  (+12 more)
(+167 files in other folders)
